--- a/TorrentBar/data/TorrentBar.html
+++ b/TorrentBar/data/TorrentBar.html
@@ -90,7 +90,7 @@
     </script>
   </head>
   <body>
-    <header>Torrent LED Light Bar control</header>
+    <header>Torrent LED Light Bar control c23c8</header>
     <form>
       <section>
         <div>
